(lang dune 3.5)

(name client_server_chat)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Edwin Ansari")

(maintainers "Edwin Ansari")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name client_server_chat)
 (synopsis "Simple one-to-one chat")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
