(lang dune 3.5)

(name client_server_chat)

(generate_opam_files true)

(source
 (github edwinans/client_server_chat))

(authors "Edwin Ansari")

(maintainers "Edwin Ansari")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name client_server_chat)
 (synopsis "Simple one-to-one chat")
 (description "TCP client and server for chat")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
